Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -36,7 +36,7 @@
 \affil[4]{UMR CNRS 8097 Centre Maurice Halbwachs, Paris, France}
 
 \author[5]{Marion Le Texier}
-\affil[5]{UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
+\affil[5]{UMR CNRS 6266 IDEES, Universit{\'e} de Rouen Normandie, France}
 
 \author[6]{Florent Le N{\' e}chet}
 \affil[6]{Universit{\'e} Paris-Est, Laboratoire Ville Mobilit{\'e} Transport, Marne-la-Vallée, France}
@@ -131,7 +131,7 @@
 
 
 \begin{abstract}
-Although simulation models of socio-spatial systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in socio-spatial models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic spatial configuration generator in order to create density grids with which socio-spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. Furthermore, this effect is sometimes larger than the effect of parameters' value change.
+Although simulation models of socio-spatial systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in socio-spatial models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic geometric structures generator in order to create density grids with which socio-spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. Furthermore, this effect is sometimes larger than the effect of parameters' value change.
 \end{abstract}
 
 \begin{keywords}
@@ -168,7 +168,7 @@ Computer simulation has been recognised and is increasingly used by geographers 
 Socio-spatial systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependency \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex systems generally, a given configuration contains clues about past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual territories and changing social environments over time prohibits the use of ergodic models. Ironically, these very models tend to be the models most frequently used in geosimulation.
 
 
-Self-organization has been shown to be a central feature of socio-spatial systems in general and of cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, Batty2007}. Complexity is partially due to bifurcations, which are determinant in socio-spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as any other initial conditions, but of more interest to the geographer. \\
+Self-organization has been shown to be a central feature of socio-spatial systems in general and of cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, batty2007cities}. Complexity is partially due to bifurcations, which are determinant in socio-spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as any other initial conditions, but of more interest to the geographer. \\
 
 
 Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) is far from isotropic, even in sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most socio-spatial models, especially cellular automata, still represent cities as uniform grids of isotropic density. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents tend to be approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of urban processes because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they might want to live in \citep{SpielmanHarrison2014}, or agents moving around will sense a different set of objects within the same fixed radius depending on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers represent initial space is therefore a central element of socio-spatial simulation models. However, this step is rarely explicit. A meaningful way of representing initial space might be to consider, not necessarily the peculiarities of every city, but at least their broad density structures so as to estimate the variability of the model behaviour to different plausible spatial arrangements.
@@ -177,7 +177,7 @@ Finally, although this may seem obvious, cities are not regular grids, and the d
 
 %In this paper, we offer a methodological solution to the problem of sensitivity of simulation models to initial spatial conditions with two application cases (Schelling and Sugarscape). 
 
-In this paper, we aim to provide an operational framework for studying the influence of geometric structures of space on the results of a simulation model representing a sociospatial system. {\bf Sociospatial systems} are understood here as groups of social agents whose behaviour is constrained by their position in geographical space, in the empirical world. The aim of the geosimulation models we are interested in is to represent, simulate and explain the dynamics of these systems. In the sociospatial systems as well as in the models representing them, agents are in {\bf interaction} among themselves and with their geographical environment. The {\bf geometric structure} of the environment defined at the initialisation of the model and its influence on the model outputs is our object in this paper. We present how to generate the geometric outputs to are used as initial spatial conditions in the model. To this end, we use the example of a density grid generator and feed its outputs to two application models (Schelling and Sugarscape). In no way do we pretend to provide a full exploration of these two particular models, of their attractors and/or potential policy implications. Instead, we present a way of performing a sensitivity analysis to initial spatial conditions of models generated systematically. The generator being controlled by its own parameters, we can then relate the parameters used to generate initial spatial conditions to the variation simulation outcomes. The purpose is two-fold: (i) to test the robustness of simulation results to small variations of generator parameters and (ii) to study the non-trivial effects of typical categories of geometric structures (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which have been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies to our knowledge. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
+In this paper, we aim to provide an operational framework for studying the influence of geometric structures of space on the results of a simulation model representing a sociospatial system. Following \citep{Jessop2008} {\bf Sociospatial systems} are understood here as groups of social agents whose behaviour is constrained by their position in geographical space, in the empirical world. The aim of the geosimulation models we are interested in is to represent, simulate and explain the dynamics of these systems. In the sociospatial systems as well as in the models representing them, agents are in {\bf interaction} among themselves and with their geographical environment. The {\bf geometric structure} of the environment defined at the initialisation of the model and its influence on the model outputs is our object in this paper. We present how to generate the geometric outputs which are used as initial spatial conditions in the model. To this end, we use the example of a density grid generator and feed its outputs to two application models (Schelling and Sugarscape). In no way do we pretend to provide a full exploration of these two particular models, of their attractors and/or potential policy implications. Instead, we present a way of performing a sensitivity analysis to initial spatial conditions of models generated systematically. The generator being controlled by its own parameters, we can then relate the parameters used to generate initial spatial conditions to the variation simulation outcomes. The purpose is two-fold: (i) to test the robustness of simulation results to small variations of generator parameters and (ii) to study the non-trivial effects of typical categories of geometric structures (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which have been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies to our knowledge. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{The effects of the space in simulation models}
@@ -236,7 +236,7 @@ The last methodological point which we need to emphasize is the relationship bet
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Spatial generator of density grids}
 
-The spatial generator applies an urban morphogenesis model \citep{Batty2007} which has been generalised, explored and calibrated by~\citet{raimbault2018calibration}. An open implementation and a characterisation of the urban forms which the model can produce allow us to integrate it easily into our workflow. Grids are generated through an iterative process which, starting from an empty grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment on population density, characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to a patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n_d$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its Moore neighborhood (i.e. its 8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $t_f$ is reached. The grid then has a population of $t_f \cdot N$ (the population lost due to diffusion process to the outside is reallocated through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four generator parameters $\alpha$, $\beta$, $n_d$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment. We furthermore fix the total population at $t_f\cdot N = 100,000$, and determine therein the number of steps needed at a given $N$. Typical value ranges for the  parameters will be taken as, following \citet{raimbault2018calibration}, $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n_d\in\left[1,4\right]$. We illustrate in Fig.\ref{fig:spatialGen} the variety of spatial configurations that can be generated.
+The spatial generator applies an urban morphogenesis model \citep{batty2007cities} which has been generalised, explored and calibrated by~\citet{raimbault2018calibration}. An open implementation and a characterisation of the urban forms which the model can produce allow us to integrate it easily into our workflow. Grids are generated through an iterative process which, starting from an empty grid, adds a quantity $N$ (population) at each time step $t$, allocating it through preferential attachment on population density, characterised by its strength of attraction $\alpha$. More precisely, each added unit has a probability equal to $P_i^{\alpha}/\sum_k P_k^{\alpha}$ to be added to a patch $i$ with population $P_i$, all $N$ units being added independently and in parallel. At the end of each time step, this growth process is smoothed $n_d$ times using a diffusion process of strength $\beta$: each patch transmits an equal share of $\beta\cdot P_i$ to its Moore neighborhood (i.e. its 8 surrounding patches). To avoid border effects such as a reflexion on the border of the world, border patches diffuse to the outside. The procedure stops when a fixed number of steps $t_f$ is reached. The grid then has a population of $t_f \cdot N$ (the population lost due to diffusion process to the outside is reallocated through a normalization procedure at the end of the steps). Grids are thus generated from the combination of the values of these four generator parameters $\alpha$, $\beta$, $n_d$ and $N$, in addition to the random seed. To ease our exploration, only the distribution of density is allowed to vary rather than the size of the grid, which we fix to a 50x50 square environment. We furthermore fix the total population at $t_f\cdot N = 100,000$, and determine therein the number of steps needed at a given $N$. Typical value ranges for the  parameters will be taken as, following \citet{raimbault2018calibration}, $\alpha\in\left[0.5,4.0\right]$, $\beta \in\left[0,0.3\right] $, $N\in \left[100,10000\right]$, $n_d\in\left[1,4\right]$. We illustrate in Fig.\ref{fig:spatialGen} the variety of spatial configurations that can be generated.
 
 %%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[!t]
@@ -304,12 +304,12 @@ We choose different experiment designs, both for generator parameters and for th
 %%%%%%%%%%%%%%%%%%%%%%
 
 
-The implementations of the models were done from NetLogo. We modified the sugarscape version with wealth of NetLogo model library (to be able to explore it intensively) and we implemented from scratch the Schelling model. Both pseudo-codes are available in~\ref{app:code}, and source code for models, grid classification and simulation results analysis is available on the open repository of the project at \url{https://github.com/AnonymousAuthor2/SpaceMatters}. Density grids are also available at this address. Simulation data are available for reproducibility on the dataverse repository at \url{https://doi.org/10.7910/DVN/A0N5GV}.
+The implementations of the models were done from NetLogo. We modified the Sugarscape version with wealth of NetLogo model library (to be able to explore it intensively) and we implemented from scratch the Schelling model. Both pseudo-codes are available in~\ref{app:code}, and source code for models, grid classification and simulation results analysis is available on the open repository of the project at \url{https://github.com/AnonymousAuthor2/SpaceMatters}. Density grids are also available at this address. Simulation data are available for reproducibility on the dataverse repository at \url{https://doi.org/10.7910/DVN/A0N5GV}.
 
 
 \subsection{Sensitivity analysis}
 
-We measure the distance of the phase diagrams for all density grids with respect to the reference phase diagram computed on the default initial spatial condition setup (a bi-centric symmetrical non toroidal configuration) using the measure defined in equation~\ref{eq:phase-distance}. For each density grid, we obtain the average squared distance between corresponding points of the phase diagrams, i.e. the mean value of the final output measure, such as segregation or inequality, for a given value of parameters in the two setups (isotropic and generated). This average squared distance for each point is then related to the average variance of each of the phase diagram (the reference one and the one for the grid under inquiry). Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability. We tested the sensitivity to the type of distance, using a Minkovski distance with a varying exponent. The results are presented in~\ref{app:distances}, and show a similar sensitivity to spatial initial conditions.
+We measure the distance of the phase diagrams for all density grids with respect to the reference phase diagram computed on the default initial spatial condition setup (a bi-centric symmetrical non toroidal configuration) using the measure defined in equation~\ref{eq:phase-distance}. For each density grid, we obtain the average squared distance between corresponding points of the phase diagrams, i.e. the mean value of the final output measure, such as segregation or inequality, for a given value of parameters in the two setups (isotropic and generated). This average squared distance for each point is then related to the average variance of each of the phase diagram (the reference one and the one for the grid under inquiry). Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability. We tested the sensitivity to the type of distance, using a Minkovski distance with a varying exponent. The results are presented in~\ref{app:distances}, and show a similar sensitivity to geometric structures.
 
 \subsubsection{Sugarscape} 
 
@@ -318,7 +318,7 @@ We measure the distance of the phase diagrams for all density grids with respect
 %   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
 % 0.08909 0.19790 1.52200 1.29600 2.16400 2.98100 
 
-We obtain a very strong sensitivity to initial spatial conditions for the Sugarscape model. Indeed, the relative distance between the phase diagrams of different density grids and the phase diagram of the reference case ranges from 0.09 to 2.98 with a median of 1.52 and an average value of 1.30. The mean distance above 1 means that, on average, the model is more sensitive to the generator parameters than to its own parameters (population and sugar endowment) in the reference model. Moreover, the maximum distance of 2.98 means that the variation due to the change of grid can be up to three times bigger than the variation due to the model parameters. We plot in Fig.~\ref{fig:sugarscape-distance-meta} the distribution of these distances in the generator parameter space. Each point represent one of the 50 different density grids used to initialise the distribution of sugar in the model. The points are projected with respect to the generator parameters, and coloured according to the relative distance of the phase diagram of the simulations using this grid to the phase diagram of the reference case. Therefore, the figure ~\ref{fig:sugarscape-distance-meta} shows that the grids generated with a high $\alpha$ (i.e. with a small number of very high density cells) produce simulation results that vary more between the reference case and the generated grid with the same values of parameters than within the reference case because of parameter variations. This pattern is emphasized when grids are generated with a high $\alpha$ and a high $\beta$ (i.e. with low gradient of density decrease around the kernels of high density). These grids have the highest relative distance to the reference case. On the contrary, with grids closer to the uniform pattern of the reference case (bottom left of the graph), the model parameters are more important in determining the final inequality levels than the initial spatial distribution of sugar. 
+We obtain a very strong sensitivity to geometric structures for the Sugarscape model. Indeed, the relative distance between the phase diagrams of different density grids and the phase diagram of the reference case ranges from 0.09 to 2.98 with a median of 1.52 and an average value of 1.30. The mean distance above 1 means that, on average, the model is more sensitive to the generator parameters than to its own parameters (population and sugar endowment) in the reference model. Moreover, the maximum distance of 2.98 means that the variation due to the change of grid can be up to three times bigger than the variation due to the model parameters. We plot in Fig.~\ref{fig:sugarscape-distance-meta} the distribution of these distances in the generator parameter space. Each point represent one of the 50 different density grids used to initialise the distribution of sugar in the model. The points are projected with respect to the generator parameters, and coloured according to the relative distance of the phase diagram of the simulations using this grid to the phase diagram of the reference case. Therefore, the figure ~\ref{fig:sugarscape-distance-meta} shows that the grids generated with a high $\alpha$ (i.e. with a small number of very high density cells) produce simulation results that vary more between the reference case and the generated grid with the same values of parameters than within the reference case because of parameter variations. This pattern is emphasized when grids are generated with a high $\alpha$ and a high $\beta$ (i.e. with low gradient of density decrease around the kernels of high density). These grids have the highest relative distance to the reference case. On the contrary, with grids closer to the uniform pattern of the reference case (bottom left of the graph), the model parameters are more important in determining the final inequality levels than the initial spatial distribution of sugar. 
 
 
 %%%%%%%%%%%%%
@@ -425,7 +425,7 @@ We now check the sensitivity in terms of qualitative behavior of phase diagrams.
 \section{Discussion}
 %%%%%%%%%%%%%%%%%%%%%%
 
-We consider that the method presented in this paper holds great potential for strengthening socio-spatial models' exploration. However, two limits and two areas of opportunities have still not been tackled. 
+We consider that the method presented in this paper holds great potential for strengthening socio-spatial models' exploration. However, three limits and two areas of opportunities have still not been tackled. 
 
 \subsection{Limits}
 
@@ -435,7 +435,7 @@ Comparing phase diagrams is as we saw not so straightforward, and further develo
 
 \subsubsection{Sensitivity of indicators to the geometry}
 
-While we investigated the sensitivity to geometry of models together with their indicators, a potential research direction is to study the dependance of indicators themselves to the spatial configuration. % TODO finish
+While we investigated the sensitivity to geometry of models together with their indicators, a potential research direction is to study the dependence of indicators themselves to the spatial configuration. Indeed, the segregation indices are likely to be zoning, size or population density dependant \citep{Wong1997,ReardonOSullivan2004}. Generating point data rather than an grid could help overcoming these issues, and appears as a promising direction for future research. This methodological claim is also interesting from theoretical and empirical views as point data may be used to construct \textit{egohoods} \citep{Hippetal2013}, i.e. a smooth definition of neighbourhoods as opposed to the commonly used non-overlapping units. 
 
 \subsubsection{Platform constraints and docking challenges}
 
@@ -455,19 +455,20 @@ We want to foster this extension of our work by releasing the density grids also
 Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents, transportation networks generators \citep{raimbault2018multi}, or coupled road network and population raster generators \citep{raimbault2019urban}. The particular density grid generator we used here is an example among possible others, and our methodological contribution is generic as it does not depend on which generator is chosen.  
 
 
-
 \subsubsection{An emancipation opportunity for social sciences.}
 
 
 As~\citet{pumain2003approche} points out in an overview of complexity approaches in geography, transfer of models and concepts between disciplines may induce a transfer of corresponding assumptions. Geography and the social sciences in general have been strongly influenced by physics in the last decades, that beside their highly enriching impact~\citep{o2015physicists}, may have softly imposed strong assumptions such as homogeneity and isotropy of space in basic models. We believe that a renewed approach on the role of space as we proposed, in other terms insisting that \emph{space matters}, is an opportunity the for social sciences to build their own stream of methodologies in the modelling domain.
 
 This relates to relations between empirical, conceptual and modeling dimensions of quantitative research in social sciences, as coined by \cite{livet2010ontology}. % TODO finish
+% to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, we added a paragraph in conclusion, discussing how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how ’neighbourhood’ is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences)
 
 
 
 \section{Conclusion}
 
 After reviewing the extensive literature on spatial biases in statistical and simulation models, we presented a method to analyse the sensitivity of a simulation's results to the initial spatial configuration. We did so by implementing a spatial generator whose output is used as input for the simulation model. We applied this approach to two textbook ABMs: Schelling and Sugarscape. With the Schelling experiment, we found that the different urban morphologies impact the interaction patterns, and that polycentric and discontinuous cities appear systematically more segregated than compact cities in terms of dissimilarity and entropy index. With Sugarscape, we show that the model is more sensitive to space than to its other parameters in the reference Netlogo implementation, both qualitatively and quantitatively: the amplitude of variations across density grids is larger than the amplitude in each phase diagram, and the behaviour of the phase diagram is qualitatively different in different regions of the morphological space. We think that this method has the potential to increase the arsenal of evaluation of socio-spatial models, in order to assess the sensitivity of models to their initial spatial conditions but also to learn about the impact of the urban form on social mechanisms.
+
 %%%%%%%%%%%%%
 % Acknowledgements
 
