--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,206 +1,12 @@
+% I've organized the ref list through alphabetic order to have a better view on it
 
-
-@article{livet2010ontology,
-  title={Ontology, a mediator for agent-based modeling in social science},
-  author={Livet, Pierre and M{\"u}ller, Jean Pierre and Phan, Denis and Sanders, Lena and Auatabu, Titeem},
-  journal={Journal of Artificial Societies and Social Simulation},
-  volume={13},
-  number={1},
-  year={2010}
-}
-
-
-@article{raimbault2018unveiling,
-  title={Unveiling co-evolutionary patterns in systems of cities: a systematic exploration of the SimpopNet model},
-  author={Raimbault, Juste},
-  journal={arXiv preprint arXiv:1809.00861},
-  year={2018}
-}
-
-@incollection{hastie2009unsupervised,
-  title={Unsupervised learning},
-  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  booktitle={The elements of statistical learning},
-  pages={485--585},
-  year={2009},
+@article{alizadeh2016generating,
+  title={Generating and analyzing spatial social networks},
+  author={Alizadeh, Meysam and Cioffi-Revilla, Claudio and Crooks, Andrew},
+  journal={Computational and Mathematical Organization Theory},
+  pages={1--29},
+  year={2016},
   publisher={Springer}
-}
-
-@article{wheeler2006urban,
-  title={Urban decentralization and income inequality: Is sprawl associated with rising income segregation across neighborhoods?},
-  author={Wheeler, Christopher H},
-  year={2006},
-  journal = {FRB of St. Louis Working Paper},
-  number = {No. 2006-037A}
-}
-
-@book{saltelli2008global,
-  title={Global sensitivity analysis: the primer},
-  author={Saltelli, Andrea and Ratto, Marco and Andres, Terry and Campolongo, Francesca and Cariboni, Jessica and Gatelli, Debora and Saisana, Michaela and Tarantola, Stefano},
-  year={2008},
-  publisher={John Wiley \& Sons}
-}
-
-
-@article{lilburne2009sensitivity,
-  title={Sensitivity analysis of spatial models},
-  author={Lilburne, Linda and Tarantola, Stefano},
-  journal={International Journal of Geographical Information Science},
-  volume={23},
-  number={2},
-  pages={151--168},
-  year={2009},
-  publisher={Taylor \& Francis}
-}
-
-
-@incollection{raimbault2019urban,
-  title={An urban morphogenesis model capturing interactions between networks and territories},
-  author={Raimbault, Juste},
-  booktitle={The Mathematics of Urban Morphology},
-  pages={383--409},
-  year={2019},
-  publisher={Springer}
-}
-
-@inproceedings{raimbault2018multi,
-  title={Multi-modeling the morphogenesis of transportation networks},
-  author={Raimbault, Juste},
-  booktitle={Artificial Life Conference Proceedings},
-  pages={382--383},
-  year={2018},
-  organization={MIT Press}
-}
-
-
-
-@article{liao2005clustering,
-  title={Clustering of time series data - a survey},
-  author={Liao, T Warren},
-  journal={Pattern recognition},
-  volume={38},
-  number={11},
-  pages={1857--1874},
-  year={2005},
-  publisher={Elsevier}
-}
-
-
-@article{benenson2004geosimulation,
-  title={Geosimulation: object-based modeling of urban phenomena},
-  author={Benenson, Itzhak and Torrens, Paul M},
-  journal={Computers, Environment and Urban Systems},
-  volume={28},
-  number={1-2},
-  pages={1--8},
-  year={2004},
-  publisher={Elsevier Science}
-}
-
-
-@article{batty2005agents,
-  title={Agents, cells, and cities: new representational models for simulating multiscale urban dynamics},
-  author={Batty, Michael},
-  journal={Environment and Planning A},
-  volume={37},
-  number={8},
-  pages={1373--1394},
-  year={2005},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-
-
-@article{kruskal1983overview,
-  title={An overview of sequence comparison: Time warps, string edits, and macromolecules},
-  author={Kruskal, Joseph B},
-  journal={SIAM review},
-  volume={25},
-  number={2},
-  pages={201--237},
-  year={1983},
-  publisher={SIAM}
-}
-
-@article{kuhnert2005comparing,
-  title={Comparing raster map comparison algorithms for spatial modeling and analysis},
-  author={Kuhnert, Matthias and Voinov, Alexey and Seppelt, Ralf},
-  journal={Photogrammetric Engineering \& Remote Sensing},
-  volume={71},
-  number={8},
-  pages={975--984},
-  year={2005},
-  publisher={American Society for Photogrammetry and Remote Sensing}
-}
-
-
-@article{o2015physicists,
-	Author = {O'Sullivan, David and Manson, Steven M},
-	Journal = {Annals of the Association of American Geographers},
-	Title = {Do Physicists Have'Geography Envy'? And What Can Geographers Learn From It?},
-	Year = {2015}}
-
-
-@article{pumain2003approche,
-	Author = {Pumain, Denise},
-	Journal = {G{\'e}ocarrefour},
-	Number = {1},
-	Pages = {25--31},
-	Title = {Une approche de la complexit{\'e} en g{\'e}ographie},
-	Volume = {78},
-	Year = {2003}}
-
-@book{arthur1994increasing,
-  title={Increasing returns and path dependence in the economy},
-  author={Arthur, W Brian},
-  year={1994},
-  publisher={University of michigan Press}
-}
-
-
-@article{raimbault2018calibration,
-  title={Calibration of a density-based model of urban morphogenesis},
-  author={Raimbault, Juste},
-  journal={PloS one},
-  volume={13},
-  number={9},
-  pages={e0203516},
-  year={2018},
-  publisher={Public Library of Science}
-}
-
-@ARTICLE{2017arXiv170806743R,
-   author = {{Raimbault}, J.},
-    title = {Calibration of a Density-based Model of Urban Morphogenesis},
-  journal = {ArXiv e-prints},
-   eprint = {1708.06743},
- keywords = {Physics - Physics and Society, Computer Science - Multiagent Systems},
-     year = {2017},
-    month = {jul},
-   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170806743R},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@article{brown2006spatial,
-  title={Spatial segregation, segregation indices and the geographical perspective},
-  author={Brown, Lawrence A and Chung, Su-Yeul},
-  journal={Population, space and place},
-  volume={12},
-  number={2},
-  pages={125--143},
-  year={2006},
-  publisher={Wiley Online Library}
-}
-
-@article{smith2002predicting,
-  title={Predicting the spatial dynamics of rabies epidemics on heterogeneous landscapes},
-  author={Smith, David L and Lucey, Brendan and Waller, Lance A and Childs, James E and Real, Leslie A},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={99},
-  number={6},
-  pages={3668--3672},
-  year={2002},
-  publisher={National Acad Sciences}
 }
 
 @article{AllenSanglier1979,
@@ -219,6 +25,20 @@
 	author = {Allen, P. and Sanglier, M.},
 	year = {1981},
 	pages = {168-183}
+}
+
+@article{arribas2014diverse,
+  title={How Diverse can Spatial Measures of Cultural Diversity be? Results from Monte Carlo Simulations on an Agent-Based Model},
+  author={Arribas-Bel, Daniel and Nijkamp, Peter and Poot, Jacques},
+  year={2014},
+  published={CreAM Discussion Paper Series, 22/14}
+}
+
+@book{arthur1994increasing,
+  title={Increasing returns and path dependence in the economy},
+  author={Arthur, W Brian},
+  year={1994},
+  publisher={University of michigan Press}
 }
 
 @article{Axtelletal1996,
@@ -254,11 +74,100 @@
 	file = {[PDF] Ã  partir de archives-ouvertes.fr:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/3BW6P3DU/Banos - 2012 - Network effects in Schelling's model of segregatio.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/7KN288A6/hal-00469727.html:text/html}
 }
 
-@book{Batty2007,
+@article{barner2017multiscale,
+  title={Multiscale Entropy in the Spatial Context of Cities},
+  author={Barner, Martin and Cottineau, Cl{\'e}mentine and Molinero, Carlos and Salat, Hadrien and Stanilov, Kiril and Arcaute, Elsa},
+  journal={arXiv preprint arXiv:1711.09817},
+  year={2017}
+}
+
+@article{batty1971modelling,
+  title={Modelling cities as dynamic systems},
+  author={Batty, Michael},
+  journal={Nature},
+  volume={231},
+  number={5303},
+  pages={425--428},
+  year={1971},
+  publisher={Springer}
+}
+
+@article{batty2005agents,
+  title={Agents, cells, and cities: new representational models for simulating multiscale urban dynamics},
+  author={Batty, Michael},
+  journal={Environment and Planning A},
+  volume={37},
+  number={8},
+  pages={1373--1394},
+  year={2005},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@book{batty2007cities,
   title={Cities and complexity: understanding cities with cellular automata, agent-based models, and fractals},
   author={Batty, Michael},
   year={2007},
   publisher={The MIT press}
+}
+
+@article{batty2007model,
+  title={Model cities},
+  author={Batty, Michael},
+  journal={Town Planning Review},
+  volume={78},
+  number={2},
+  pages={125--151},
+  year={2007},
+  publisher={Liverpool University Press}
+}
+
+@article{benenson2002entity,
+  title={Entity-based modeling of urban residential dynamics: the case of Yaffo, Tel Aviv},
+  author={Benenson, Itzhak and Omer, Itzhak and Hatna, Erez},
+  journal={Environment and Planning B: Planning and Design},
+  volume={29},
+  number={4},
+  pages={491--512},
+  year={2002},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{benenson2004geosimulation,
+  title={Geosimulation: object-based modeling of urban phenomena},
+  author={Benenson, Itzhak and Torrens, Paul M},
+  journal={Computers, Environment and Urban Systems},
+  volume={28},
+  number={1-2},
+  pages={1--8},
+  year={2004},
+  publisher={Elsevier Science}
+}
+
+@article{bhat1999activity,
+  title={Activity-based modeling of travel demand},
+  author={Bhat, Chandra R and Koppelman, Frank S},
+  journal={INTERNATIONAL SERIES IN OPERATIONS RESEARCH AND MANAGEMENT SCIENCE},
+  pages={35--62},
+  year={1999},
+  publisher={Kluwer Academic Publishers}
+}
+
+@article{brown2006spatial,
+  title={Spatial segregation, segregation indices and the geographical perspective},
+  author={Brown, Lawrence A and Chung, Su-Yeul},
+  journal={Population, space and place},
+  volume={12},
+  number={2},
+  pages={125--143},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@techreport{carley1999generating,
+  title={On generating hypotheses using computer simulations},
+  author={Carley, Kathleen M},
+  year={1999},
+  institution={Carnegie-Mellon, Univ. of Pittsburg}
 }
 
 @article{Castellanoetal2009,
@@ -284,6 +193,23 @@
 	file = {[PDF] Ã  partir de crei.eu:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/74UJJCV9/Ciccone and Hall - 1993 - Productivity and the density of economic activity.pdf:application/pdf;Snapshot:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/XVEQD4UM/w4313.html:text/html}
 }
 
+@article{cottineau2015modular,
+  title={A modular modelling framework for hypotheses testing in the simulation of urbanisation},
+  author={Cottineau, Cl{\'e}mentine and Reuillon, Romain and Chapron, Paul and Rey-Coyrehourcq, S{\'e}bastien and Pumain, Denise},
+  journal={Systems},
+  volume={3},
+  number={4},
+  pages={348--377},
+  year={2015},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{cottineau2016back,
+	Author = {Cottineau, C and Rey, S and Reuillon, R},
+	Booktitle = {Royal Geographical Society-Annual Conference 2016-Session: Geocomputation, the Next 20 Years (1)},
+	Title = {Back to the Future of Multimodeling},
+	Year = {2016}}
+
 @book{EpsteinAxtell1996,
   title={Growing artificial societies: Social science from the bottom up (complex adaptive systems)},
   author={Epstein, Joshua M and Axtell, Robert L},
@@ -299,6 +225,16 @@
 	author = {Fagiolo, Giorgio and Valente, Marco and Vriend, Nicolaas J.},
 	year = {2007},
 	pages = {316-336}
+}
+
+@article{filatova2013spatial,
+  title={Spatial agent-based models for socio-ecological systems: challenges and prospects},
+  author={Filatova, Tatiana and Verburg, Peter H and Parker, Dawn Cassandra and Stannard, Carol Ann},
+  journal={Environmental modelling \& software},
+  volume={45},
+  pages={1--7},
+  year={2013},
+  publisher={Elsevier}
 }
 
 @article{FlacheHegselmann2001,
@@ -350,7 +286,23 @@
 	journal = {Physical Review E},
 	author = {Gauvin, Laetitia and Nadal, Jean-Pierre and Vannimenus, Jean},
 	year = {2010},
-	pages = {}
+	pages = {066120}
+}
+
+@book{gell1995quark,
+  title={The Quark and the Jaguar: Adventures in the Simple and the Complex},
+  author={Gell-Mann, Murray},
+  year={1995},
+  publisher={Macmillan}
+}
+
+@incollection{hastie2009unsupervised,
+  title={Unsupervised learning},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  booktitle={The elements of statistical learning},
+  pages={485--585},
+  year={2009},
+  publisher={Springer}
 }
 
 @article{HatnaBenenson2012,
@@ -363,6 +315,57 @@
 	pages = {1-6}
 }
 
+@article{Hippetal2013,
+	title = {Egohoods as waves washing across the city: a New measure of "neighborhoods"},
+	volume = {51},
+    number = {2},
+	journal = {Criminology},
+	author = {Hipp, John R. and Boessen, Adam},
+	year = {2013},
+	pages = {287-327}
+}
+
+@article{jargowsky2002sprawl,
+  title={Sprawl, concentration of poverty, and urban inequality},
+  author={Jargowsky, Paul A},
+  journal={Urban sprawl: Causes, consequences, and policy responses},
+  pages={39--72},
+  year={2002},
+  publisher={Urban Institute Wash. DC}
+}
+
+@article{Jessop2008,
+  title={Theorizing Sociospatial Relations},
+  author={Jessop, Bob and Brenner, Neil and Jones, Martin},
+  journal={Environment and Planning D: Society and Space},
+  volume={26},
+  number={3},
+  pages={389-401},
+  year={2008}
+}
+
+@article{kruskal1983overview,
+  title={An overview of sequence comparison: Time warps, string edits, and macromolecules},
+  author={Kruskal, Joseph B},
+  journal={SIAM review},
+  volume={25},
+  number={2},
+  pages={201--237},
+  year={1983},
+  publisher={SIAM}
+}
+
+@article{kuhnert2005comparing,
+  title={Comparing raster map comparison algorithms for spatial modeling and analysis},
+  author={Kuhnert, Matthias and Voinov, Alexey and Seppelt, Ralf},
+  journal={Photogrammetric Engineering \& Remote Sensing},
+  volume={71},
+  number={8},
+  pages={975--984},
+  year={2005},
+  publisher={American Society for Photogrammetry and Remote Sensing}
+}
+
 @article{Kwan2012,
 	title = {The uncertain geographic context problem},
 	volume = {102},
@@ -372,16 +375,56 @@
 	year = {2012},
 	pages = {958-968}
 }
-@article{vazquez2002effect,
-  title={Effect of grid size on effective parameters and model performance of the MIKE-SHE code},
-  author={V{\'a}zquez, RF and Feyen, L and Feyen, J and Refsgaard, JC},
-  journal={Hydrological processes},
-  volume={16},
+
+@misc{li2009netlogo,
+  title={NetLogo Sugarscape 3 Wealth Distribution model},
+  author={Li, J and Wilensky, U},
+  year={2009},
+  publisher={Evanston, IL: Center for Connected Learning and Computer-Based Modeling, Northwestern Institute on Complex Systems, Northwestern University. http://ccl. northwestern. edu/netlogo/models/Sugarscape3WealthDistribution}
+}
+
+@article{liao2005clustering,
+  title={Clustering of time series data - a survey},
+  author={Liao, T Warren},
+  journal={Pattern recognition},
+  volume={38},
+  number={11},
+  pages={1857--1874},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{lilburne2009sensitivity,
+  title={Sensitivity analysis of spatial models},
+  author={Lilburne, Linda and Tarantola, Stefano},
+  journal={International Journal of Geographical Information Science},
+  volume={23},
   number={2},
-  pages={355--372},
-  year={2002},
+  pages={151--168},
+  year={2009},
+  publisher={Taylor \& Francis}
+}
+
+@article{livet2010ontology,
+  title={Ontology, a mediator for agent-based modeling in social science},
+  author={Livet, Pierre and M{\"u}ller, Jean Pierre and Phan, Denis and Sanders, Lena and Auatabu, Titeem},
+  journal={Journal of Artificial Societies and Social Simulation},
+  volume={13},
+  number={1},
+  year={2010}
+}
+
+@article{hagen2012new,
+  title={A new method of adaptive zoning for spatial interaction models},
+  author={Hagen-Zanker, Alex and Jin, Ying},
+  journal={Geographical Analysis},
+  volume={44},
+  number={4},
+  pages={281--301},
+  year={2012},
   publisher={Wiley Online Library}
 }
+
 @article{horritt2001effects,
   title={Effects of spatial resolution on a raster based model of flood flow},
   author={Horritt, MS and Bates, PD},
@@ -392,15 +435,7 @@
   year={2001},
   publisher={Elsevier}
 }
-@article{filatova2013spatial,
-  title={Spatial agent-based models for socio-ecological systems: challenges and prospects},
-  author={Filatova, Tatiana and Verburg, Peter H and Parker, Dawn Cassandra and Stannard, Carol Ann},
-  journal={Environmental modelling \& software},
-  volume={45},
-  pages={1--7},
-  year={2013},
-  publisher={Elsevier}
-}
+
 @article{LauriJaggi2003,
 	title = {Role of'vision'in neighbourhood racial segregation: a variant of the {Schelling} segregation model},
 	volume = {40},
@@ -412,14 +447,7 @@
 	note = {00115},
 	pages = {2687--2704}
 }
-@article{moreno2009integrating,
-  title={Integrating morphology in urban simulation through reticular automata},
-  author={Moreno, Diego and Badariotti, Dominique and Banos, Arnaud},
-  journal={Handbook of theoretical and quantitative geography},
-  pages={261--309},
-  year={2009},
-  publisher={UNIL/FGSE Lausanne}
-}
+
 @article{LeNechet2015,
 	title = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine: une typologie de la configuration interne des densit{\' e}s pour les principales m{\' e}ropoles europ{\' e}ennes de l'audit urbain},
 	shorttitle = {De la forme urbaine {\` a}  la structure m{\' e}tropolitaine},
@@ -431,6 +459,12 @@
 	file = {[HTML] From revues.org:/Users/clementinecottineau/Library/Application Support/Zotero/Profiles/i69s0sxq.default/zotero/storage/EX2IAUZ4/26753.html:text/html}
 }
 
+@article{le2015forme,
+	Author = {Le N{\'e}chet, Florent},
+	Journal = {Cybergeo: European Journal of Geography},
+	Title = {De la forme urbaine {\`a} la structure m{\'e}tropolitaine: une typologie de la configuration interne des densit{\'e}s pour les principales m{\'e}tropoles europ{\'e}ennes de l'audit urbain},
+	Year = {2015}}
+
 @article{LeTexierCaruso2017,
 	title = {Assessing geographical effects in spatial diffusion processes: The case of euro coins},
 	journal = {Computer, Environment and Urban Systems},
@@ -441,6 +475,32 @@
     pages = {81-93}
 }
 
+@article{ligmann2013spatially,
+  title={Spatially-explicit sensitivity analysis of an agent-based model of land use change},
+  author={Ligmann-Zielinska, Arika},
+  journal={International Journal of Geographical Information Science},
+  volume={27},
+  number={9},
+  pages={1764--1781},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{moreno2009integrating,
+  title={Integrating morphology in urban simulation through reticular automata},
+  author={Moreno, Diego and Badariotti, Dominique and Banos, Arnaud},
+  journal={Handbook of theoretical and quantitative geography},
+  pages={261--309},
+  year={2009},
+  publisher={UNIL/FGSE Lausanne}
+}
+
+@misc{openshaw1983data,
+	Author = {Openshaw, S},
+	Title = {FROM DATA CRUNCHING TO MODEL CRUNCHING-THE DAWN OF A NEW ERA},
+	Year = {1983}}
+
+
 @book{Openshaw1984,
   title={The Modifiable Areal Unit Problem},
   author={Openshaw, Stan},
@@ -448,6 +508,12 @@
   publisher={Geo Books},
   address={Norwich, UK}
 }
+
+@article{o2015physicists,
+	Author = {O'Sullivan, David and Manson, Steven M},
+	Journal = {Annals of the Association of American Geographers},
+	Title = {Do Physicists Have'Geography Envy'? And What Can Geographers Learn From It?},
+	Year = {2015}}
 
 @book{Portugali2000,
   title={Self-Organization and the City},
@@ -465,6 +531,30 @@
   address={Paris}
 }
 
+@article{pumain2003approche,
+	Author = {Pumain, Denise},
+	Journal = {G{\'e}ocarrefour},
+	Number = {1},
+	Pages = {25--31},
+	Title = {Une approche de la complexit{\'e} en g{\'e}ographie},
+	Volume = {78},
+	Year = {2003}}
+
+@book{pumain2006hierarchy,
+   author={Pumain, Denise},
+  title={Hierarchy in natural and social sciences},
+   year={2006},
+  publisher={Springer}
+}
+
+@incollection{pumain2012urban,
+	Author = {Pumain, Denise},
+	Booktitle = {Complexity Theories of Cities Have Come of Age},
+	Pages = {91--103},
+	Publisher = {Springer},
+	Title = {Urban systems dynamics, urban growth and scaling laws: The question of ergodicity},
+	Year = {2012}}
+	
 @article{Quesneletal2009,
   title={The Virtual Laboratory Environment - An operational framework for multi-modelling, simulation and analysis of complex dynamical systems},
   author={Quesnel, Gauthier and Duboz, Raphael and Ramat, Eric},
@@ -483,6 +573,86 @@
   organization={M. A. Aziz-Alaoui, C. Bertelle, X. Z. Liu, D. Olivier}
 }
 
+@article{raimbault2018calibration,
+  title={Calibration of a density-based model of urban morphogenesis},
+  author={Raimbault, Juste},
+  journal={PloS one},
+  volume={13},
+  number={9},
+  pages={e0203516},
+  year={2018},
+  publisher={Public Library of Science}
+}
+
+@article{raimbault2018unveiling,
+  title={Unveiling co-evolutionary patterns in systems of cities: a systematic exploration of the SimpopNet model},
+  author={Raimbault, Juste},
+  journal={arXiv preprint arXiv:1809.00861},
+  year={2018}
+}
+
+@inproceedings{raimbault2018multi,
+  title={Multi-modeling the morphogenesis of transportation networks},
+  author={Raimbault, Juste},
+  booktitle={Artificial Life Conference Proceedings},
+  pages={382--383},
+  year={2018},
+  organization={MIT Press}
+}
+
+@incollection{raimbault2019urban,
+  title={An urban morphogenesis model capturing interactions between networks and territories},
+  author={Raimbault, Juste},
+  booktitle={The Mathematics of Urban Morphology},
+  pages={383--409},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{ReardonOSullivan2004,
+  title={Measures of spatial segregation},
+  author={Reardon, Sean F. and O'Sullivan, David},
+  journal={Sociological Methodology},
+  volume={34},
+  number{1},
+  pages={121-162},
+  year={2004},
+}
+
+@article{reuillon2013openmole,
+	Author = {Reuillon, Romain and Leclaire, Mathieu and Rey-Coyrehourcq, Sebastien},
+	Journal = {Future Generation Computer Systems},
+	Number = {8},
+	Pages = {1981--1990},
+	Title = {OpenMOLE, a workflow engine specifically tailored for the distributed exploration of simulation models},
+	Volume = {29},
+	Year = {2013}}
+
+@article{rubner2000earth,
+  title={The earth mover's distance as a metric for image retrieval},
+  author={Rubner, Yossi and Tomasi, Carlo and Guibas, Leonidas J},
+  journal={International journal of computer vision},
+  volume={40},
+  number={2},
+  pages={99--121},
+  year={2000},
+  publisher={Springer}
+}
+
+@book{saint1989villes,
+  title={Villes et auto-organisation},
+  author={Saint-Julien, Th{\'e}r{\`e}se and Sanders, Lena and Pumain, Denise},
+  year={1989},
+  publisher={Economica}
+}
+
+@book{saltelli2008global,
+  title={Global sensitivity analysis: the primer},
+  author={Saltelli, Andrea and Ratto, Marco and Andres, Terry and Campolongo, Francesca and Cariboni, Jessica and Gatelli, Debora and Saisana, Michaela and Tarantola, Stefano},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+
 @article{Schelling1969,
   title={Models of segregation},
   author={Schelling, Thomas C.},
@@ -494,12 +664,41 @@
   publisher={JSTOR}
 }
 
+@article{schelling1971dynamic,
+  title={Dynamic models of segregation},
+  author={Schelling, Thomas C},
+  journal={Journal of mathematical sociology},
+  volume={1},
+  number={2},
+  pages={143--186},
+  year={1971},
+  publisher={Taylor \& Francis}
+}
+
 @book{Schelling1978,
   title={Micromotives and Macrobehavior},
   author={Schelling, Thomas C.},
   year={1978},
   publisher={Norton},
   address={New York}
+}
+
+@phdthesis{schmitt2014modelisation,
+  title={Mod{\'e}lisation de la dynamique des syst{\`e}mes de peuplement: de SimpopLocal {\`a} SimpopNet.},
+  author={Schmitt, Clara},
+  year={2014},
+  school={Paris 1}
+}
+
+@article{schwanen2001travel,
+  title={Travel behaviour in Dutch monocentric and policentric urban systems},
+  author={Schwanen, Tim and Dieleman, Frans M and Dijst, Martin},
+  journal={Journal of Transport Geography},
+  volume={9},
+  number={3},
+  pages={173--186},
+  year={2001},
+  publisher={Elsevier}
 }
 
 @article{Singhetal2009,
@@ -510,6 +709,17 @@
   number={12},
   pages={341–366},
   year={2009},
+}
+
+@article{smith2002predicting,
+  title={Predicting the spatial dynamics of rabies epidemics on heterogeneous landscapes},
+  author={Smith, David L and Lucey, Brendan and Waller, Lance A and Childs, James E and Real, Leslie A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={6},
+  pages={3668--3672},
+  year={2002},
+  publisher={National Acad Sciences}
 }
 
 @article{SpielmanHarrison2014,
@@ -546,6 +756,36 @@ pages = {1-27},
 year = {2017}
 }
 
+@article{vazquez2002effect,
+  title={Effect of grid size on effective parameters and model performance of the MIKE-SHE code},
+  author={V{\'a}zquez, RF and Feyen, L and Feyen, J and Refsgaard, JC},
+  journal={Hydrological processes},
+  volume={16},
+  number={2},
+  pages={355--372},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{visser2006map,
+  title={The map comparison kit},
+  author={Visser, Hans and De Nijs, T},
+  journal={Environmental Modelling \& Software},
+  volume={21},
+  number={3},
+  pages={346--358},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{wheeler2006urban,
+  title={Urban decentralization and income inequality: Is sprawl associated with rising income segregation across neighborhoods?},
+  author={Wheeler, Christopher H},
+  year={2006},
+  journal = {FRB of St. Louis Working Paper},
+  number = {No. 2006-037A}
+}
+
 @book{WeidlichHaag1988,
   title={Interregional Migration},
   author={Weidlich, W. and Haag, G.},
@@ -572,6 +812,25 @@ year = {2017}
 	pages = {201-208}
 }
 
+@article{white1986segregation,
+  title={Segregation and diversity measures in population distribution},
+  author={White, Michael J},
+  journal={Population index},
+  pages={198--221},
+  year={1986},
+  publisher={JSTOR}
+}
+
+@article{wilensky2007making,
+  title={Making models match: Replicating an agent-based model},
+  author={Wilensky, Uri and Rand, William},
+  journal={Journal of Artificial Societies and Social Simulation},
+  volume={10},
+  number={4},
+  pages={2},
+  year={2007}
+}
+
 @book{Wilson1981,
   title={Catastrophe theory and bifurcation: Application to Urban and Regional System},
   author={Wilson, A.},
@@ -590,6 +849,15 @@ year = {2017}
 	pages = {379-387}
 }
 
+@article{Wong1997,
+	title = {SpatialDependency of Segregation Indices},
+	volume = {41},
+	journal = {Canadian Geographer},
+	author = {Wong, David W. S.},
+	year = {1997},
+	pages = {128-136}
+}
+
 @article{Wu2002,
 	title = {Complexity and Urban Simulation: Towards a Computational Laboratory},
 	volume = {22},
@@ -605,202 +873,16 @@ year = {2017}
 	Title = {The new purposes of the French high-speed rail system in the framework of a centralized network: a substitute to the domestic air transport market?},
 	Year = {2010}}
 
-
-
-
-@incollection{pumain2012urban,
-	Author = {Pumain, Denise},
-	Booktitle = {Complexity Theories of Cities Have Come of Age},
-	Pages = {91--103},
-	Publisher = {Springer},
-	Title = {Urban systems dynamics, urban growth and scaling laws: The question of ergodicity},
-	Year = {2012}}
-
-
-
-@phdthesis{schmitt2014modelisation,
-  title={Mod{\'e}lisation de la dynamique des syst{\`e}mes de peuplement: de SimpopLocal {\`a} SimpopNet.},
-  author={Schmitt, Clara},
-  year={2014},
-  school={Paris 1}
-}
-
-
-@misc{li2009netlogo,
-  title={NetLogo Sugarscape 3 Wealth Distribution model},
-  author={Li, J and Wilensky, U},
-  year={2009},
-  publisher={Evanston, IL: Center for Connected Learning and Computer-Based Modeling, Northwestern Institute on Complex Systems, Northwestern University. http://ccl. northwestern. edu/netlogo/models/Sugarscape3WealthDistribution}
-}
-
-
-@book{saint1989villes,
-  title={Villes et auto-organisation},
-  author={Saint-Julien, Th{\'e}r{\`e}se and Sanders, Lena and Pumain, Denise},
-  year={1989},
-  publisher={Economica}
-}
-
-@book{batty2007cities,
-  title={Cities and complexity: understanding cities with cellular automata, agent-based models, and fractals},
-  author={Batty, Michael},
-  year={2007},
-  publisher={The MIT press}
-}
-
-
-@book{pumain2006hierarchy,
-   author={Pumain, Denise},
-  title={Hierarchy in natural and social sciences},
-   year={2006},
-  publisher={Springer}
-}
-
-@book{gell1995quark,
-  title={The Quark and the Jaguar: Adventures in the Simple and the Complex},
-  author={Gell-Mann, Murray},
-  year={1995},
-  publisher={Macmillan}
-}
-
-@article{schwanen2001travel,
-  title={Travel behaviour in Dutch monocentric and policentric urban systems},
-  author={Schwanen, Tim and Dieleman, Frans M and Dijst, Martin},
-  journal={Journal of Transport Geography},
-  volume={9},
-  number={3},
-  pages={173--186},
-  year={2001},
-  publisher={Elsevier}
-}
-
-@article{hagen2012new,
-  title={A new method of adaptive zoning for spatial interaction models},
-  author={Hagen-Zanker, Alex and Jin, Ying},
-  journal={Geographical Analysis},
-  volume={44},
-  number={4},
-  pages={281--301},
-  year={2012},
-  publisher={Wiley Online Library}
-}
-
-@article{cottineau2015modular,
-  title={A modular modelling framework for hypotheses testing in the simulation of urbanisation},
-  author={Cottineau, Cl{\'e}mentine and Reuillon, Romain and Chapron, Paul and Rey-Coyrehourcq, S{\'e}bastien and Pumain, Denise},
-  journal={Systems},
-  volume={3},
-  number={4},
-  pages={348--377},
-  year={2015},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@article{alizadeh2016generating,
-  title={Generating and analyzing spatial social networks},
-  author={Alizadeh, Meysam and Cioffi-Revilla, Claudio and Crooks, Andrew},
-  journal={Computational and Mathematical Organization Theory},
-  pages={1--29},
-  year={2016},
-  publisher={Springer}
-}
-
-@article{jargowsky2002sprawl,
-  title={Sprawl, concentration of poverty, and urban inequality},
-  author={Jargowsky, Paul A},
-  journal={Urban sprawl: Causes, consequences, and policy responses},
-  pages={39--72},
-  year={2002},
-  publisher={Urban Institute Wash. DC}
-}
-
-@article{benenson2002entity,
-  title={Entity-based modeling of urban residential dynamics: the case of Yaffo, Tel Aviv},
-  author={Benenson, Itzhak and Omer, Itzhak and Hatna, Erez},
-  journal={Environment and Planning B: Planning and Design},
-  volume={29},
-  number={4},
-  pages={491--512},
-  year={2002},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-@article{rubner2000earth,
-  title={The earth mover's distance as a metric for image retrieval},
-  author={Rubner, Yossi and Tomasi, Carlo and Guibas, Leonidas J},
-  journal={International journal of computer vision},
-  volume={40},
-  number={2},
-  pages={99--121},
-  year={2000},
-  publisher={Springer}
-}
-
-@article{arribas2014diverse,
-  title={How Diverse can Spatial Measures of Cultural Diversity be? Results from Monte Carlo Simulations on an Agent-Based Model},
-  author={Arribas-Bel, Daniel and Nijkamp, Peter and Poot, Jacques},
-  year={2014},
-  published={CreAM Discussion Paper Series, 22/14}
-}
-
-
-@article{visser2006map,
-  title={The map comparison kit},
-  author={Visser, Hans and De Nijs, T},
-  journal={Environmental Modelling \& Software},
-  volume={21},
-  number={3},
-  pages={346--358},
-  year={2006},
-  publisher={Elsevier}
-}
-
-
-@article{schelling1971dynamic,
-  title={Dynamic models of segregation},
-  author={Schelling, Thomas C},
-  journal={Journal of mathematical sociology},
-  volume={1},
-  number={2},
-  pages={143--186},
-  year={1971},
-  publisher={Taylor \& Francis}
-}
-
-@article{wilensky2007making,
-  title={Making models match: Replicating an agent-based model},
-  author={Wilensky, Uri and Rand, William},
-  journal={Journal of Artificial Societies and Social Simulation},
-  volume={10},
-  number={4},
-  pages={2},
-  year={2007}
-}
-
-@article{batty1971modelling,
-  title={Modelling cities as dynamic systems},
-  author={Batty, Michael},
-  journal={Nature},
-  volume={231},
-  number={5303},
-  pages={425--428},
-  year={1971},
-  publisher={Springer}
-}
-@techreport{carley1999generating,
-  title={On generating hypotheses using computer simulations},
-  author={Carley, Kathleen M},
-  year={1999},
-  institution={Carnegie-Mellon, Univ. of Pittsburg}
-}
-@article{batty2007model,
-  title={Model cities},
-  author={Batty, Michael},
-  journal={Town Planning Review},
-  volume={78},
-  number={2},
-  pages={125--151},
-  year={2007},
-  publisher={Liverpool University Press}
+@ARTICLE{2017arXiv170806743R,
+   author = {{Raimbault}, J.},
+    title = {Calibration of a Density-based Model of Urban Morphogenesis},
+  journal = {ArXiv e-prints},
+   eprint = {1708.06743},
+ keywords = {Physics - Physics and Society, Computer Science - Multiagent Systems},
+     year = {2017},
+    month = {jul},
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170806743R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{10.1371/journal.pone.0178165,
@@ -820,74 +902,25 @@ year = {2017}
 
 
 
-@article{le2015forme,
-	Author = {Le N{\'e}chet, Florent},
-	Journal = {Cybergeo: European Journal of Geography},
-	Title = {De la forme urbaine {\`a} la structure m{\'e}tropolitaine: une typologie de la configuration interne des densit{\'e}s pour les principales m{\'e}tropoles europ{\'e}ennes de l'audit urbain},
-	Year = {2015}}
-
-
-
-@misc{openshaw1983data,
-	Author = {Openshaw, S},
-	Title = {FROM DATA CRUNCHING TO MODEL CRUNCHING-THE DAWN OF A NEW ERA},
-	Year = {1983}}
 
 
 
 
-@inproceedings{cottineau2016back,
-	Author = {Cottineau, C and Rey, S and Reuillon, R},
-	Booktitle = {Royal Geographical Society-Annual Conference 2016-Session: Geocomputation, the Next 20 Years (1)},
-	Title = {Back to the Future of Multimodeling},
-	Year = {2016}}
-
-@article{bhat1999activity,
-  title={Activity-based modeling of travel demand},
-  author={Bhat, Chandra R and Koppelman, Frank S},
-  journal={INTERNATIONAL SERIES IN OPERATIONS RESEARCH AND MANAGEMENT SCIENCE},
-  pages={35--62},
-  year={1999},
-  publisher={Kluwer Academic Publishers}
-}
-
-
-@article{reuillon2013openmole,
-	Author = {Reuillon, Romain and Leclaire, Mathieu and Rey-Coyrehourcq, Sebastien},
-	Journal = {Future Generation Computer Systems},
-	Number = {8},
-	Pages = {1981--1990},
-	Title = {OpenMOLE, a workflow engine specifically tailored for the distributed exploration of simulation models},
-	Volume = {29},
-	Year = {2013}}
 
 
 
 
-@article{ligmann2013spatially,
-  title={Spatially-explicit sensitivity analysis of an agent-based model of land use change},
-  author={Ligmann-Zielinska, Arika},
-  journal={International Journal of Geographical Information Science},
-  volume={27},
-  number={9},
-  pages={1764--1781},
-  year={2013},
-  publisher={Taylor \& Francis}
-}
 
-@article{barner2017multiscale,
-  title={Multiscale Entropy in the Spatial Context of Cities},
-  author={Barner, Martin and Cottineau, Cl{\'e}mentine and Molinero, Carlos and Salat, Hadrien and Stanilov, Kiril and Arcaute, Elsa},
-  journal={arXiv preprint arXiv:1711.09817},
-  year={2017}
-}
 
-@article{white1986segregation,
-  title={Segregation and diversity measures in population distribution},
-  author={White, Michael J},
-  journal={Population index},
-  pages={198--221},
-  year={1986},
-  publisher={JSTOR}
-}
+
+
+
+
+
+
+
+
+
+
+
 
