--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -79,8 +79,7 @@ A. In terms of the ambiguity between the social and spatial component
 \begin{itemize}
 \item A.1. We have precised and clarified the argument of the paper (mainly in introduction) by qualifying our contribution, which is to provide an operational framework for studying the influence of geometric structures of space on the results of a geosimulation model. We have thus distinguished two effects of geographical space in simulation modelling: the ones that are part of the model, reflecting for example the role played by distance on decreasing agents' perception or potential social interactions; and the ones which act as geometric structures "on which" the social elements simulated interact, i.e. geometric constraints of the simulation. The first type of effects is addressed by traditional modelling. Our original contribution is to tackle the second type. %\comment[CC]{done in 1.5 and 1.8}
  
-\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space. This term refers to empirical systems, which are the targets of the modelling process), \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we reserve for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because the is the only geometric structure it generates, whereas a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5}
-
+\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space. This term refers to empirical systems, which are the targets of the modelling process), \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we reserve for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because this is the only geometric structure it generates, whereas a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5}
 
  \item A.3. We have modified figure 1 to express the clarified approach visually. Naming the generator parameter "gamma" has helped reduced the confusion that the term 'meta-parameter' was inducing. We have also replaced the expressions "quantitative results" by "sensitivity analysis" and "qualitative results" by "variations by types of geometric structure", in the figure as in the subsections of the paper. %\comment[CC]{done}
 \end{itemize}
@@ -90,22 +89,20 @@ B. To highlight limitations as well as promising perspectives of improvement, an
 
  \begin{itemize}
  
-  \item B.1. We have added a discussion of how segregation indicators can themselves be influenced by geometric structures (because they give the same weight to cells of different density). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research.  \comment{il faut reprendre ces elements dans l'article}
+  \item B.1. We have added a discussion of how segregation indicators can themselves be influenced by geometric structures (because they give the same weight to cells of different density). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
   
-  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, We added a paragraph in conclusion, discussing how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
+  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, We added a paragraph in discussion, explaining how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
   
-  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper). We could also in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example networks). \comment{il faut reprendre ces elements dans l'article}
+  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper). We could also in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks). % \comment{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.1}
 \end{itemize}
 
 \bigskip
 
-\textbf{to do list:}
+%\textbf{to do list:}
 
- \textbf{Sociospatial system} pour parler des systèmes empiriques. \comment[MLT]{Done}\\
- \textbf{interactions} pour parler de ce qui se passe dans le modele.\\
-  \textbf{geometric structures} pour parler des outputs issus du générateur.\\
-  + parler de "density grid generator" quand on développe le nôtre. \\
-  caser" Jessop (2008) points in particular to the interdependence between social phenomena and the spatial environment where they take place. We model the social system as the interaction dynamics of agents and spatial units. The spatial generator produces the geometric support for these interactions." in intro 1.4 \\
+ % \textbf{Sociospatial system} pour parler des systèmes empiriques, \textbf{interactions} pour parler de ce qui se passe dans le modele,  \textbf{geometric structures} pour parler des outputs issus du générateur et  parler de \textbf{density grid generator} quand on développe le nôtre. \comment{done}
+ 
+ % caser" Jessop (2008) points in particular to the interdependence between social phenomena and the spatial environment where they take place. We model the social system as the interaction dynamics of agents and spatial units. The spatial generator produces the geometric support for these interactions." in intro 1.4 \\ \comment[MLT]{To avoid redundancies, I have simply added the reference to Jessop when we describe Figure 1.}
   
   
 %We now turn to point-by-point responses to referees comments.
@@ -249,7 +246,7 @@ B. To highlight limitations as well as promising perspectives of improvement, an
 
   \textit{Furthermore, there are now examples of spatial models that go beyond administrative neighborhoods and overimposed spatial boundaries, i.e., egohoods (e.g., https://onlinelibrary.wiley.com/doi/abs/10.1111/1745-9125.12006), which could be interesting to see implemented in ABM.}
   
-  $\rightarrow$ cf. discussion of egohoods in conclusion (comment B)
+  $\rightarrow$ we added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation.
   
   \medskip
   
