--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -72,28 +72,29 @@ Juste Raimbault and co-authors%\\
 
 \bigskip
 
-We want to thank the two reviewers for their thorough evaluation and discussion of our paper, as well as the challenging questions they asked. We have revised the manuscript in a way that addresses most of the comments. In this response, we first want to address the two main questions that arose for both reviews. The first one (A) relates to the original mis-specification/ambiguities between the social and spatial components of the modelling process. The second one (B) relates to the contribution of the approach in terms of potential use for model makers, for domain experts and in operational contexts.
+We want to thank the two reviewers for their thorough evaluation and discussion of our paper, as well as the challenging questions they asked. We have revised the manuscript in a way that we believe addresses most of the comments. In this response, we first want to address the two main questions that arose for both reviews. The first one (A) relates to the original mis-specification/ambiguities between the social and spatial components of the modelling process. The second one (B) relates to the contribution of the approach in terms of potential use for model makers, for domain experts and in operational contexts.
 
  \medskip
 A. In terms of the ambiguity between the social and spatial component 
 \begin{itemize}
 \item A.1. We have precised and clarified the argument of the paper (mainly in introduction) by qualifying our contribution, which is to provide an operational framework for studying the influence of geometric structures of space on the results of a geosimulation model. We have thus distinguished two effects of geographical space in simulation modelling: the ones that are part of the model, reflecting for example the role played by distance on decreasing agents' perception or potential social interactions; and the ones which act as geometric structures "on which" the social elements simulated interact, i.e. geometric constraints of the simulation. The first type of effects is addressed by traditional modelling. Our original contribution is to tackle the second type. %\comment[CC]{done in 1.5 and 1.8}
  
-\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space. This term refers to empirical systems, which are the targets of the modelling process), \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we reserve for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because this is the only geometric structure it generates, whereas a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5}
+\item A.2. We have clarified the terms used in our paper introduction to distinguish between: \textbf{sociospatial systems} (i.e. groups of social agents whose behaviour is constrained by their position in geographical space)%. This term refers to empirical systems, which are the targets of the modelling process)% Mise en commentaire par FL 190812 : je trouve que cela alourdi inutilement la phrase
+, \textbf{interactions} (what happens between agents and between agents and their environment, in the model as well as in the empirical system) and \textbf{geometric structure}, a term we use for qualifying the geometric outputs of the spatial generator which are used as initial spatial conditions in the model. When we talk about the generator we actually used in the paper, we call it a "density grid generator" because it generates a square grid with heterogeneous density, whereas in all generality a "spatial generator" could potentially generate graph or point structures. %\comment[CC]{done in 1.5} %Changement par FL 190812 Because this is the only geometric structure it generates
 
  \item A.3. We have modified figure 1 to express the clarified approach visually. Naming the generator parameter "gamma" has helped reduced the confusion that the term 'meta-parameter' was inducing. We have also replaced the expressions "quantitative results" by "sensitivity analysis" and "qualitative results" by "variations by types of geometric structure", in the figure as in the subsections of the paper. %\comment[CC]{done}
 \end{itemize}
 
  \medskip
-B. To highlight limitations as well as promising perspectives of improvement, answer the concern about the genericity of the method and expose its links with the conceptual and empirical domains:
+B. To highlight limitations as well as promising perspectives of improvement, we answer the concern about the genericity of the method and expose its links with the conceptual and empirical domains:
 
  \begin{itemize}
  
-  \item B.1. We have added a discussion of how segregation indicators can themselves be influenced by geometric structures (because they give the same weight to cells of different density). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
+  \item B.1. We have added a discussion of\comment[FL]{on?} how segregation indicators can themselves be linked with geometric structure (which can typically happens if an indicator give the same weight to cells of different densities). This is a limitation of the method as it is but also an avenue for promoting stronger indicators in empirical research. % \comment[MLT]{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.3}
   
-  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, We added a paragraph in discussion, explaining how our approach allows to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
+  \item B.2. To inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010, We added a paragraph in discussion, explaining how our approach allows us to go back to questioning empirical cases from the model and questioning our concepts (for example how 'neighbourhood' is modelled since Schelling compared to the meaning of neighbourhood in empirical/theoretical social sciences). \comment{il faut reprendre ces elements dans l'article}
   
-  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper). We could also in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks). % \comment{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.1}
+  \item B.3. As a perspective to reduce this bias, we could compute ego-neighbourhoods rather than a regular grid (another paper)\comment[FL]{pas clair : pour calculer les indicateurs? pour les interactions? à préciser comment sont utilisés ces ego neighborhoods}. We could also\comment[FL]{plutôt : In further researches, we plan to extend the analysis...} in another paper vary the size of grid and its cell shape (cf. MAUP), but also generate other types of geometric structures to feed into geosimulation models (for example points or networks). % \comment{j'ai formulé un paragraphe court sur ce point en discussion, en lien avec le point B.1}
 \end{itemize}
 
 \bigskip
@@ -121,7 +122,7 @@ B. To highlight limitations as well as promising perspectives of improvement, an
  % The methodology described is very convincing as it allows the utilisation of a tool that takes the spatial conditions – as causes or effects or intermediates – actually explicitly into account. With this approach, the paper convincingly outlines a pragmatic application by creating typical spatial compositions in urban contexts that is monocentric, polycentric or discontinuous cities.
  	\item \textit{From this methodological perspective of reviewing, it would be helpful to add some more information to approaches/techniques used within the tool of the spatial generator. For example, paragraph 2.8 mentions four dimensions of spatial structure but leave the reader alone with just the terms. Either describe these or omit it.}
    
-   $\rightarrow$ To describe more the spatial generator we added a few sentences; and the generator was furthermore better situated among the many possible others in the discussion.
+   $\rightarrow$ To describe in more details the density grid generator we added a few sentences; and the generator was furthermore better situated among the many possible others in the discussion.
    %ways of making a spatial generator as Young2002 (FLN/MLT).
  	% item \comment[JR]{will add some description on urban form indicators etc.}
 	  
@@ -168,7 +169,7 @@ B. To highlight limitations as well as promising perspectives of improvement, an
   \item \textit{Then, in paragraph 1.3, the complexity of systems with respect to segregation is also problematically described.} \ldots
   % Emergent behaviour that may lead to segregation is first and foremost a social process, taking social interactions at the local scale (income, housing costs, etc.) and/or at the macro scale (laws, rules, economic system, cultural attitudes, etc.) into account. These interactions can then be associated with the material and relational dimension of geographical spaces. The question remains: what is the role of geographical systems? In this respect, the paper offers some relevant clues such as the MAUP problem or the “uncertain geographic context problem”. 
   
-  $\rightarrow$ see comment A. cite Banos, 2012
+  $\rightarrow$ see comment A. cite Banos, 2012 \comment[FL]{quel était le point exactement avec Banos?}
 
   \medskip
 
@@ -196,9 +197,11 @@ B. To highlight limitations as well as promising perspectives of improvement, an
   \medskip
  
  
-  %The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. 
-  \item \comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?}
+  \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }\comment[FL]{j'ai pas compris pourquoi la phrase du reviewer avait été mise en commentaire, j'ai remis}
+ \comment[JR]{I rather agree that it is quite reductionist, and that the discussion may be valid only at very abstract levels (on which we were not explicit maybe ?) - maybe make these conclusions more moderate} \comment[MLT]{I kind of disagree with the idea that it is straightforward that centralised cities produce more segregation as it is not a direct parameter of the model but an output. Plus: what argument would he or she have to state that a big center would be automatically less segregated that several smaller ones? And I believe that explaining why polycentric cities are more segregated than others is out of the scope of the paper. But we could add his or her comment in the discussion section, saying that we hove we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results?} \comment[FK]{du coup je fais une proposition de réponse ci-dessous en reprenant ces différents éléments}
+  We understand this statements, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we wished to show what kind of results can be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results? \comment[FL]{à la relecture de l'article s'assurer que cette prise de recul est bien explicitée}
   
+  \item \comment[FL]{ne pas oublier les trois points ci-dessous!!!}
   \item in discussion, say that indeed the indicators can themselves be influenced by geometric structures (cf. comment B) but on the processes, there is nothing obvious about the influence of structures on behavioural spatial patterns (if you imagine a model with no interactions between agents for example) + it's a difference between the model and its potential addition to the real systems. cf. B
   
   \item rewrite 1.11 \& 1.12 which is misleading
@@ -239,19 +242,20 @@ B. To highlight limitations as well as promising perspectives of improvement, an
   
   $\rightarrow$ cf. comment B.3
   % \item \comment[JR]{this is a relevant remark but far beyond the scope of the paper, as an extension of what we did but with perturbation of real datasets / sensitivity to noise - Julien wanted to begin working on that actually and it should be integrated into spatialdata at some point - we also are supposed to implement such a perturbator to test the 4city model}
-  
-  \item it as not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in intro (especially fig. 1). We thank reviewer 2 for highlighting this limitation.
+  it as not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in intro (especially fig. 1). We thank reviewer 2 for highlighting this limitation.
 
   \medskip
 
-  \textit{Furthermore, there are now examples of spatial models that go beyond administrative neighborhoods and overimposed spatial boundaries, i.e., egohoods (e.g., https://onlinelibrary.wiley.com/doi/abs/10.1111/1745-9125.12006), which could be interesting to see implemented in ABM.}
+  \item \textit{Furthermore, there are now examples of spatial models that go beyond administrative neighborhoods and overimposed spatial boundaries, i.e., egohoods (e.g., https://onlinelibrary.wiley.com/doi/abs/10.1111/1745-9125.12006), which could be interesting to see implemented in ABM.}
   
   $\rightarrow$ we added a paragraph on the limits of our density grid approach in discussion, in which we mention the possibility to use egohoods to better measure segregation.
   
   \medskip
   
   %Spatial econometrics based on empirical dataset is developing fast. It would be useful to understand how these models can enrich ABM and vice-versa. 
-   \item this is very interesting to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010. We need to add a paragraph about this discussion in conclusion and how our approach allows to go back to questioning empirical cases from the model and questioning our concepts ('neighbourhood'). cf. comment B
+   \item this is very interesting to inform the interactions between empirics, concepts and models as discussed by Livet et al., 2010. We need to add a paragraph about this discussion in conclusion and how our approach allows to go back to questioning empirical cases from the model and questioning our concepts ('neighbourhood'). 
+   
+   $\rightarrow$  cf. comment B
 
   \medskip
 
